--- a/.github/actions/setup-ubuntu-deps/action.yml
+++ b/.github/actions/setup-ubuntu-deps/action.yml
@@ -20,7 +20,7 @@ runs:
 
         $SUDO apt-get update
         $SUDO apt-get install -y \
-          wget \
+          wget make lsb-release gnupg software-properties-common \
           libcurl4-openssl-dev \
           libfmt-dev \
           libspdlog-dev \
