ci(cpp): change default compiler

--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   CABIN_TERM_COLOR: always
-  CXX: g++  # default compiler to build
+  CXX: g++-14  # default compiler to build
   LLVM_VER: 20
 
 permissions:
