--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ubuntu:25.10
-      options: --user 1001
+      # options: --user 1001
     strategy:
       fail-fast: false
       matrix:
@@ -54,9 +54,9 @@ jobs:
 
       - uses: actions/checkout@v5
 
-      # - run: |
-      #     echo "pwd = $PWD"
-      #     git config --global --add safe.directory "$PWD"
+      - run: |
+          echo "pwd = $GITHUB_WORKSPACE"
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
 
       - name: Setup Ubuntu dependencies
         uses: ./.github/actions/setup-ubuntu-deps
