--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -37,7 +37,7 @@ jobs:
 
   clang:
     name: "build & test (Linux - Clang ${{ matrix.ver }} - ${{ matrix.build }})"
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
