--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -65,10 +65,7 @@ jobs:
 
   gcc:
     name: "build & test (Linux - GCC ${{ matrix.ver }} - ${{ matrix.build }}${{ matrix.coverage && ' - coverage' || '' }})"
-    runs-on: ubuntu-latest
-    container:
-      image: ubuntu:25.10
-      options: --user 1001
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
@@ -83,20 +80,10 @@ jobs:
     env:
       CXX: g++-${{ matrix.ver }}
     steps:
-      - name: Install git
-        run: sudo apt-get update && sudo apt-get install -y git
-
       - uses: actions/checkout@v5
-
-      # - run: |
-      #     echo "pwd = $PWD"
-      #     git config --global --add safe.directory "$PWD"
 
       - name: Setup Ubuntu dependencies
         uses: ./.github/actions/setup-ubuntu-deps
-
-      - name: Setup GCC
-        run: apt-get install -y g++-${{ matrix.ver }}
 
       - name: Install lcov
         if: matrix.coverage
