--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -70,7 +70,7 @@ jobs:
       fail-fast: false
       matrix:
         build: [dev, release]
-        ver: [12, 13, 14]
+        ver: [13, 14, 15]
         coverage: [false]
         include:
           # Coverage testing with GCC 14
@@ -84,6 +84,13 @@ jobs:
 
       - name: Setup Ubuntu dependencies
         uses: ./.github/actions/setup-ubuntu-deps
+
+      - name: Setup GCC
+        if: matrix.ver == 15
+        run: |
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
+          brew install gcc@15
+          echo "CXX=$(brew --prefix gcc@15)/bin/g++-15" >> "$GITHUB_ENV"
 
       - name: Install lcov
         if: matrix.coverage
