--- a/.github/workflows/cpp.yml
+++ b/.github/workflows/cpp.yml
@@ -89,8 +89,9 @@ jobs:
         if: matrix.ver == 15
         run: |
           eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-          brew install gcc@15
-          echo "CXX=$(brew --prefix gcc@15)/bin/g++-15" >> "$GITHUB_ENV"
+          brew install gcc@15 binutils
+          echo "$(brew --prefix binutils)/bin" >> "$GITHUB_PATH"
+          echo "$(brew --prefix gcc@15)/bin" >> "$GITHUB_PATH"
 
       - name: Install lcov
         if: matrix.coverage
