build!: drop macOS 14 build support

--- a/cabin.toml
+++ b/cabin.toml
@@ -2,7 +2,7 @@
 authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
 description = "C++ package manager and build system"
 documentation = "https://docs.cabinpkg.com"
-edition = "2b"
+edition = "23"
 homepage = "https://cabinpkg.com"
 license = "Apache-2.0"
 name = "cabin"
