--- a/cabin.toml
+++ b/cabin.toml
@@ -12,13 +12,13 @@ version = "0.13.0"
 
 [dependencies]
 toml11 = {git = "https://github.com/ToruNiina/toml11.git", tag = "v4.4.0"}
-mitama-cpp-result = {git = "https://github.com/loliGothicK/mitama-cpp-result.git", tag = "v11.0.0"}
 fmt = {version = ">=9 && <13", system = true}
 spdlog = {version = ">=1.8 && <2", system = true}
 libcurl = {version = ">=7.79.1 && <9", system = true}
 libgit2 = {version = ">=1.7 && <1.10", system = true}
 nlohmann_json = {version = "3.10.5", system = true}
 tbb = {version = ">=2021.5.0 && <2023.0.0", system = true}
+rustify = {path = "rustify"}
 
 [dev-dependencies]
 boost-ut = {git = "https://github.com/boost-ext/ut.git", tag = "v2.3.1"}
