--- a/cabin.toml
+++ b/cabin.toml
@@ -18,7 +18,7 @@ libcurl = {version = ">=7.79.1 && <9", system = true}
 libgit2 = {version = ">=1.7 && <1.10", system = true}
 nlohmann_json = {version = "3.10.5", system = true}
 tbb = {version = ">=2021.5.0 && <2023.0.0", system = true}
-rustify = {path = "rustify"}
+rs-cpp = {path = "./rs-cpp"}
 
 [dev-dependencies]
 boost-ut = {git = "https://github.com/boost-ext/ut.git", tag = "v2.3.1"}
