feat!: support recursive path build

--- a/cabin.toml
+++ b/cabin.toml
@@ -19,6 +19,7 @@ libgit2 = {version = ">=1.7 && <1.10", system = true}
 nlohmann_json = {version = "3.10.5", system = true}
 tbb = {version = ">=2021.5.0 && <2023.0.0", system = true}
 rs-cpp = {git = "https://github.com/ken-matsui/rs-cpp.git", branch = "main"}
+semver = {path = "semver"}
 
 [dev-dependencies]
 boost-ut = {git = "https://github.com/boost-ext/ut.git", tag = "v2.3.1"}
